tests/hm_typing/faulty_unused_type_variable.sy
f: fn<a: Num> -> void : external

// error: Expected a start function in the main module
